# equation-solver

./: pyproject.toml
lab/: __main__.py  common.py  newton.py  plot.py  relaxation.py  simple_iterations.py
